--- a/Css/style.css
+++ b/Css/style.css
@@ -1,196 +1,357 @@
 @font-face {
-    font-family: "Poppins";
-    src: url(../Font/Poppins/Poppins-Regular.ttf);
-    font-weight: 400;
-    font-style: normal;
+  font-family: "Poppins";
+  src: url(../Font/Poppins/Poppins-Regular.ttf);
+  font-weight: 400;
+  font-style: normal;
 }
 
 :root {
-    /* --fontziseNavLinks: 1.3rem; */
-    --fontziseNavLinks: clamp(1.1rem, 1.5vw, 1.4rem);
-    --colorNavLinks: #087f5b;
-    --colorNavLinksFocus: #00885f;
-    --fontziseMainTitle: clamp(3rem, 5vw, 5rem);
-    --fontziseMainDescr: clamp(1.2rem, 1.8vw, 2.5rem);
-    --colorMainGreen: #087f5b;
-    --colorMainBlue: #1971c2;
-    --colorMainOrange: #f08c00;
+  /* --fontziseNavLinks: 1.3rem; */
+  --fontziseNavLinks: clamp(1.1rem, 1.7vw, 1.4rem);
+  --fontziseNavLinksRes: clamp(1.5rem, 4vw, 1.8rem);
+  --colorNavLinks: #087f5b;
+  --colorNavLinksFocus: #00885f;
+  --fontziseMainTitle: clamp(3rem, 5vw, 5rem);
+  --fontziseMainDescr: clamp(.4rem, 1.5vw, 2.5rem);
+  --fontziseMainTitleRes: clamp(2rem, 4vw, 4rem);
+  --fontziseMainDescrRes: clamp(.8rem, 2vw, 1.8rem);
+  --colorMainGreen: #087f5b;
+  --colorMainBlue: #1971c2;
+  --colorMainOrange: #f08c00;
+  --colorLogoFace: #4267b2;
 }
 
-
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Poppins";
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins";
 }
 
 .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid chocolate;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid chocolate;
 }
 
 .contNav {
-    width: 90%;
-    height: 13vh;
-    border: 1px solid blue;
+  width: 90%;
+  height: 13vh;
+  border: 1px solid blue;
 }
 
 .contMain {
-    width: 90%;
-    height: 86.5vh;
-    border: 1px solid darkorchid;
+  width: 90%;
+  height: 86.5vh;
+  border: 1px solid darkorchid;
 }
-
 
 /* ----- Navigation Styles ----- */
 
 .contNav nav {
-    display: flex;
-    height: 100%;
-    padding: 0.8rem;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    border: 1px solid green;
+  display: flex;
+  height: 100%;
+  padding: 0.8rem;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  border: 1px solid green;
+  --state-close: scale(0);
+  --state-hamburger: scale(1);
+  --state-menu: translate(-100%);
 }
 
-.contNav nav .contLogo
-{
-    width: 5.5rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: 1px solid red;
+.contNav nav:target {
+  --state-close: scale(1);
+  --state-hamburger: scale(0);
+  --state-menu: translate(0);
+}
+
+.contNav nav .contLogo {
+  width: 5.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid red;
+}
+
+.contNav nav .contMenuLogo {
+  display: grid;
+  justify-items: start;
+  align-items: center;
 }
 
 .contNav nav .contLogo img {
-    width: 100%;
+  width: 100%;
 }
 
 .contNav nav .contItensMenu {
-    display: flex;
-    border: 1px solid red;
-    align-items: center;
+  border: 1px solid red;
+  width: 99%;
+  height: 86.5vh;
+  background-color: white;
+  z-index: 1000;
+  position: absolute;
+  top: 13.2%;
+  bottom: 0%;
+  right: 0%;
+  left: 0.5%;
+  display: grid;
+  align-items: center;
+  justify-items: center;
+  row-gap: 0.5rem;
+  transform: var(--state-menu);
+  transition: 0.2s transform;
 }
 
-.contNav nav .contItensMenu ul {
-    display: flex;
-    /* gap: 7rem; */
-    gap: clamp(0.9rem, 7vw, 7vw);
-    border: 1px solid chartreuse;
+.contNav nav .contMenuLogo .navHam,
+.contNav nav .contMenuLogo .navClo {
+  cursor: pointer;
+  grid-column: -2/-1;
+  grid-row: 1/2;
+  transition: 0.3s transform;
 }
 
-.contNav nav .contItensMenu ul li {
-    list-style: none;
+.contNav nav .contMenuLogo .navHam img,
+.contNav nav .contMenuLogo .navClo img {
+  max-width: 70px;
 }
 
-.contNav nav .contItensMenu ul li a {
-    text-decoration: none;
-    font-size: var(--fontziseNavLinks);
-    color: var(--colorNavLinks);
-    font-weight: 500;
+.contNav nav .contMenuLogo .navHam {
+  transform: var(--state-hamburger);
 }
 
-.contNav nav .contItensMenu ul li a:hover {
-    color: var(--colorNavLinksFocus);
-    font-weight: 600;
+.contNav nav .contMenuLogo .navClo {
+  transform: var(--state-close);
+}
+
+.contNav nav .contItensMenu li {
+  list-style: none;
+}
+
+.contNav nav .contItensMenu li a {
+  text-decoration: none;
+  font-size: var(--fontziseNavLinksRes);
+  color: var(--colorNavLinks);
+  font-weight: 500;
+}
+
+.contNav nav .contItensMenu li a:hover {
+  color: var(--colorNavLinksFocus);
+  font-weight: 600;
 }
 
 /* ----- End Navigation Styles ----- */
 
 
+
 /* ----- Main Styles ----- */
 
 .contMain {
-    display: grid;
-    position: relative;
-    /* grid-template-columns: minmax(min(100%, 600px), 1fr) minmax(min(100%, 40%), .8fr); */
-    grid-template-columns: repeat(auto-fit, minmax(min(100%, 450px), 1fr)); 
-    align-items: center;
-    justify-items: center;
-    width: 90%;
-    /* grid-template-columns: 2fr 1fr; */
+  display: grid;
+  position: relative;
+  /* grid-template-columns: minmax(min(100%, 600px), 1fr) minmax(min(100%, 40%), .8fr); */
+  grid-template-columns: repeat(auto-fit, minmax(min(100%, 472px), 1fr));
+  align-items: center;
+  justify-items: center;
+  width: 90%;
+  /* grid-template-columns: 2fr 1fr; */
 }
 
 .contMain .contSectionInfo {
-    
-    border: 1px solid green;
-    display: flex;
-    flex-direction: column;
-    width: 90%;
-    align-items: center;
-    color: var(--colorMainBlue);
+  border: 1px solid green;
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  align-items: center;
+  color: var(--colorMainBlue);
 }
 
-.contMain .contSectionInfo .contSecInfoTitle, .contMain .contSectionInfo .contSecInfoDesc {
-    width: 80%;
+.contMain .contSectionInfo .contSecInfoTitle,
+.contMain .contSectionInfo .contSecInfoDesc {
+  width: 92%;
 }
 
-.contMain .contSectionInfo .contSecInfoTitle{
-    margin-bottom: 5rem;
+.contMain .contSectionInfo .contSecInfoTitle {
+  margin-bottom: 5rem;
 }
 
 .contMain .contSectionInfo .contSecInfoTitle h2 {
-    font-size: var(--fontziseMainTitle);
+  font-size: var(--fontziseMainTitle);
 }
 
 .contMain .contSectionInfo .contSecInfoDesc p {
-    font-size: var(--fontziseMainDescr);
+  font-size: var(--fontziseMainDescr);
 }
 
 .contMain .contSectionImg {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: 1px solid violet;
-    width: 90%;
-    height: 90%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid violet;
+  width: 90%;
+  height: 90%;
 }
 
 .contMain .contSectionImg .contImg {
-    width: 90%;
-    height: 90%;
-    border: 1px solid chocolate;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  width: 90%;
+  height: 90%;
+  border: 1px solid chocolate;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .contMain .contSectionImg .contImg img {
-    max-width: 500px;
-    width: 25vw;
-    object-fit: contain;
+  max-width: 500px;
+  width: 25vw;
+  object-fit: contain;
 }
 
-
-.carrusel1, .carruselAside {
-    border: 1px solid red;
-    display: flex;
-    gap: 2rem;
-    position: absolute;
-    background-color: rgba(0, 0, 0, .15);
+.carrusel1,
+.carruselAside {
+  border: 1px solid red;
+  display: flex;
+  gap: 2rem;
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.15);
 }
 
-.carrusel1 .contImgCarr, .carruselAside .contImgCarr  {
-    border: 1px solid green;
-}
-.carrusel1 .contImgCarr img,.carruselAside .contImgCarr img {
-    max-width: 60px;
+.carrusel1 .contImgCarr,
+.carruselAside .contImgCarr {
+  border: 1px solid green;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.carrusel1 .contImgCarr img,.carruselAside .contImgCarr img:hover {
-    cursor: pointer;
+.carrusel1 .contImgCarr img,
+.carruselAside .contImgCarr img {
+  max-width: 60px;
+}
+
+.carrusel1 .contImgCarr img {
+  max-width: 80px;
+}
+
+.carrusel1 .contImgCarr img,
+.carruselAside .contImgCarr img:hover {
+  cursor: pointer;
 }
 
 .carrusel1 {
-    bottom:  15px;
+  bottom: 15px;
 }
 
 .carruselAside {
-    right: 6%;
-    flex-direction: column;
+  right: 6%;
+  flex-direction: column;
 }
 
+.carruselAside .contImgCarr .logoTwit {
+  filter: invert(71%) sepia(56%) saturate(6280%) hue-rotate(175deg)
+    brightness(99%) contrast(91%);
+}
+
+
+
+
+
+@media (min-width: 950px) {
+  .contNav nav .contLogo {
+    position: absolute;
+  }
+
+  .contNav nav {
+    --state-hamburger: scale(0);
+    --state-menu: translate(0);
+  }
+
+  .contNav nav:target {
+    --state-close: scale(0);
+  }
+
+  .contNav nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: clamp(0.9rem, 7vw, 7vw);
+    border: 1px solid chartreuse;
+  }
+
+  .contNav nav .contItensMenu {
+    background-color: unset;
+    position: unset;
+    display: flex;
+    flex-wrap: wrap;
+    width: 50%;
+    height: 90%;
+    justify-content: space-evenly;
+    align-items: center;
+    transform: var(--state-menu);
+    transition: 0.2s transform;
+  }
+
+  .contNav nav .contItensMenu li a {
+    font-size: var(--fontziseNavLinks);
+  }
+}
+
+
+@media (max-width: 1050px) {
+
+main {
+  height: 86.5vh;
+}
+.container {
+  flex-direction: column;
+}
+
+.contMain {
+  grid-template-rows: .2fr .8fr;
+  height: 100%;
+}
+
+.contMain .contSectionInfo {
+  max-height: 30vh;
+  justify-content: start;
+  width: 95%;
+}
+
+.contMain .contSectionImg {
+  height: 100%;
+}
+
+.contMain .contSectionImg .contImg {
+  object-fit: contain;
+  width: 100%;
+  height: 100%;
+}
+
+.contMain .contSectionImg .contImg img {
+  max-width: 700px;
+  max-height: 700px;
+  width: clamp(3rem, 48vw, 70vw);
+  height: clamp(3rem, 52vh, 70vh);
+}
+
+.contMain .contSectionInfo .contSecInfoTitle {
+  margin-bottom: 1rem;
+}
+
+.contMain .contSectionInfo .contSecInfoTitle h2 {
+  font-size: var(--fontziseMainTitleRes);
+}
+
+.contMain .contSectionInfo .contSecInfoDesc p {
+  font-size: var(--fontziseMainDescrRes);
+}
+
+.carrusel1 {
+  width: 90%;
+  position: relative;
+  justify-content: center;
+}
+
+}
